--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "draft-js": "^0.11.7",
     "graphql-ws": "^5.11.2",
+    "react-router-dom": "^6.7.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
