--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,9 +34,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.0.0",
     "draft-js": "^0.11.7",
     "graphql-ws": "^5.11.2",
+    "react-router-dom": "^6.7.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
